# cookiecutter-python-basic

./: cookiecutter.json
{{cokiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/: Makefile  cookiecutter-config-file.yml  pyproject.toml
